# core-rust

./: Cargo.toml  LICENSE  README.md  SPEC_LOCK.json  SPEC_VERSION
.github/workflows/: ci.yml
crates/refetch-cli/: Cargo.toml
crates/refetch-cli/src/: main.rs
crates/refetch-contract/: Cargo.toml
crates/refetch-contract/src/: lib.rs
crates/refetch-core/: Cargo.toml
crates/refetch-core/src/: lib.rs  validation.rs
crates/refetch-core/tests/: conformance.rs  schema_validation.rs
docs/: ROADMAP.md
scripts/: sync-spec-snapshot.sh  verify-spec-snapshot.py
tests/spec/v0.1/: SHA256SUMS.json  analyses.json  candidates.json
tests/spec/v0.1/docs/: terminology.md
tests/spec/v0.1/docs/maintainers/: KNOWN_LIMITATIONS.md  PROJECT_GUARDRAILS.md
tests/spec/v0.1/expected-slates/: contribution-opportunities.json  frontier-watch.json  production-readiness.json
tests/spec/v0.1/fixtures/v0.1/expected/: frontier.feed-slate.json  maintenance.feed-slate.json  production.feed-slate.json
tests/spec/v0.1/fixtures/v0.1/invalid/: dangling-evidence-ref.json  duplicate-analysis-id.json  duplicate-analysis-signal-name.json  duplicate-candidate-id.json  duplicate-candidate-signal-name.json  duplicate-evidence-id.json  invalid-expected-score.json  (+8 more)
tests/spec/v0.1/lenses/: contribution-opportunities.json  frontier-watch.json  production-readiness.json
tests/spec/v0.1/rfcs/: 0001-semantic-feed.md
tests/spec/v0.1/schemas/v0.1/: analysis-record.schema.json  common.schema.json  feed-candidate.schema.json  feed-slate.schema.json  lens-profile.schema.json  rank-request.schema.json
(+3 files in other folders)
